# ikapi

./: README.md  docker-compose.yml
app/: Dockerfile  main.py  models.py  pyproject.toml  tests.py
app/routers/: __init__.py  battle.py
mysql/conf.d/: my.cnf
